syntax = "proto3";

option csharp_namespace = "Proto.Command.Tickets";

service TicketCommandProtoService {
  rpc CreateTicket (CreateTicketCommandProto) returns (CommandResponse);
  rpc UpdateTicketData (UpdateTicketDataCommandProto) returns (CommandResponse);
  rpc UpdateTicketDocumentation (UpdateTicketDocumentationCommandProto) returns (CommandResponse);
}

message CreateTicketCommandProto {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
}

message UpdateTicketDataCommandProto {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
}

message UpdateTicketDocumentationCommandProto {
  string ticketId = 1;
  string documentation = 2;
}

message CommandResponse {
  bool success = 1;
}